force-app/main/default/objects/Lead__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used - Refinance</fullName>
            </value>
            <value>
                <fullName>Used  -Repurchase</fullName>
            </value>
            <value>
                <fullName>Top up</fullName>
            </value>
            <value>
                <fullName>Parallel Loan</fullName>
            </value>
            <value>
                <fullName>Unsecured Business Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>