force-app/main/default/objects/Lead__c/fields/BL_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>BL_Branch_Code__c</fullName>
    <formula>Branch__r.Branch_Code__c</formula>
    <label>Branch Code</label>
    <type>Text</type>
</CustomField>