force-app/main/default/objects/Lead__c/fields/BL_Cancellation_Source__c.field-meta.xml
<CustomField>
    <fullName>BL_Cancellation_Source__c</fullName>
    <label>Cancellation Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Induced</fullName>
            </value>
            <value>
                <fullName>Customer Induced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>