force-app/main/default/objects/Lead__c/fields/BL_Lead_Convertor_Code__c.field-meta.xml
<CustomField>
    <fullName>BL_Lead_Convertor_Code__c</fullName>
    <label>Lead Convertor Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>