force-app/main/default/objects/Lead__c/fields/BL_Repayment_Mode__c.field-meta.xml
<CustomField>
    <fullName>BL_Repayment_Mode__c</fullName>
    <label>Repayment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NACH</fullName>
            </value>
            <value>
                <fullName>SI from USFB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>