force-app/main/default/objects/Lead__c/fields/Cancel_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Sub_Reason__c</fullName>
    <label>Cancel Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>