force-app/main/default/objects/Lead__c/fields/Constitution__c.field-meta.xml
<CustomField>
    <fullName>Constitution__c</fullName>
    <label>Constitution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Constitution</valueSetName>
    </valueSet>
</CustomField>