force-app/main/default/objects/Lead__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>IF( OR( isPickVal(Constitution__c ,&apos;Individual&apos;) ,isPickVal(Constitution__c ,&apos;Sole Proprietorship&apos;)), First_Name__c +&apos; &apos;+ Middle_Name__c +&apos; &apos;+ Last_Name__c , Entity_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>