force-app/main/default/objects/Lead__c/fields/Date_of_Birth_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Incorporation__c</fullName>
    <label>Date of Birth/ Incorporation</label>
    <type>Date</type>
</CustomField>