force-app/main/default/objects/Lead__c/fields/DSA_DSE_Code__c.field-meta.xml
<CustomField>
    <fullName>DSA_DSE_Code__c</fullName>
    <formula>DSA_DSE_Name__r.Sic</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSA/DSE Code</label>
    <type>Text</type>
</CustomField>