force-app/main/default/objects/Lead__c/fields/DSA_DSE_Name__c.field-meta.xml
<CustomField>
    <fullName>DSA_DSE_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DSA/DSE Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>