force-app/main/default/objects/Lead__c/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <label>Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>