force-app/main/default/objects/Lead__c/fields/IsReadOnly__c.field-meta.xml
<CustomField>
    <fullName>IsReadOnly__c</fullName>
    <formula>IF(ISPICKVAL( Lead_Status__c , &apos;Rejected&apos;) || ISPICKVAL(Lead_Status__c, &apos;Cancelled&apos;) || ISPICKVAL(Lead_Stage__c , &apos;Converted&apos;) || $User.Id != OwnerId , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Read Only</label>
    <type>Checkbox</type>
</CustomField>