force-app/main/default/objects/Lead__c/fields/Lead_Generator_Code__c.field-meta.xml
<CustomField>
    <fullName>Lead_Generator_Code__c</fullName>
    <formula>Owner:User.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Generator Code</label>
    <type>Text</type>
</CustomField>