force-app/main/default/objects/Lead__c/fields/Lead_Nature__c.field-meta.xml
<CustomField>
    <fullName>Lead_Nature__c</fullName>
    <label>Lead Nature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HOT</fullName>
            </value>
            <value>
                <fullName>WARM</fullName>
            </value>
            <value>
                <fullName>COLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>