force-app/main/default/objects/Lead__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Branch Walk-in</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Cross-Sell</fullName>
            </value>
            <value>
                <fullName>Outbound Activity-Branch</fullName>
            </value>
            <value>
                <fullName>Home Market</fullName>
            </value>
            <value>
                <fullName>DSA</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Marketing Activity- BTL</fullName>
            </value>
            <value>
                <fullName>Marketing Channel- ATL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>