force-app/main/default/objects/Lead__c/fields/LeMS_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>LeMS_Lead_ID__c</fullName>
    <description>This will be auto-populated by the UB_SyncLeadService API class.</description>
    <label>LeMS Lead ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>