force-app/main/default/objects/Lead__c/fields/Moratorium_Period__c.field-meta.xml
<CustomField>
    <fullName>Moratorium_Period__c</fullName>
    <label>Moratorium Period (Month)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Is_Moratorium_required__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>