force-app/main/default/objects/Lead__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF( ISBLANK( Entity_Name__c ), IF(ISBLANK(Middle_Name__c),

UPPER(LEFT(First_Name__c,1))&amp;LOWER(Mid(First_Name__c, 2, Len(First_Name__c)-1))

+&quot; &quot;+

UPPER(LEFT(Last_Name__c,1))&amp;LOWER(Mid(Last_Name__c, 2, Len(Last_Name__c)-1))

,

UPPER(LEFT(First_Name__c,1))&amp;LOWER(Mid(First_Name__c, 2, Len(First_Name__c)-1))

+&quot; &quot;+

UPPER(LEFT(Middle_Name__c,1))&amp;LOWER(Mid(Middle_Name__c, 2, Len(Middle_Name__c)-1))

+&quot; &quot;+

UPPER(LEFT(Last_Name__c,1))&amp;LOWER(Mid(Last_Name__c, 2, Len(Last_Name__c)-1))

), Entity_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>