force-app/main/default/objects/Lead__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <defaultValue>&apos;Other Sources&apos;</defaultValue>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other Sources</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>