force-app/main/default/objects/Lead__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New CV</fullName>
            </value>
            <value>
                <fullName>Used CV</fullName>
            </value>
            <value>
                <fullName>New CE</fullName>
            </value>
            <value>
                <fullName>Used CE</fullName>
            </value>
            <value>
                <fullName>Business Loan</fullName>
            </value>
            <value>
                <fullName>Business Loan Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>