force-app/main/default/objects/Lead__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <defaultValue>&apos;WHE999&apos;</defaultValue>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WHE999</fullName>
                <default>true</default>
                <label>CV/CE(WHE999)</label>
            </value>
            <value>
                <fullName>266</fullName>
                <label>Business Loan Plus</label>
            </value>
            <value>
                <fullName>129</fullName>
                <label>Business Loan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>