force-app/main/default/objects/Lead__c/fields/Product_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Type__c</fullName>
    <label>Product Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Vehicle Loan</fullName>
            </value>
            <value>
                <fullName>Construction Equipment Loan</fullName>
            </value>
            <value>
                <fullName>Car Loan, Tractor Loan</fullName>
            </value>
            <value>
                <fullName>Three Wheeler Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>