force-app/main/default/objects/Lead__c/fields/Product_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Product_Vertical__c</fullName>
    <label>Product Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wheels</fullName>
            </value>
            <value>
                <fullName>Retail Assets</fullName>
            </value>
            <value>
                <fullName>MSME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>