force-app/main/default/objects/Lead__c/fields/Reject_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_Sub_Reason__c</fullName>
    <label>Reject Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reject_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recent OD and High DPD in the current running accounts.</fullName>
            </value>
            <value>
                <fullName>SUB / SMA / High DPD / account in the closed loan of CV / CE</fullName>
            </value>
            <value>
                <fullName>Fleet Expansion Not As Per Norms</fullName>
            </value>
            <value>
                <fullName>FFR Norms not met</fullName>
            </value>
            <value>
                <fullName>Experience norms not met</fullName>
            </value>
            <value>
                <fullName>Insufficient Credit History</fullName>
            </value>
            <value>
                <fullName>Credit PD Negative</fullName>
            </value>
            <value>
                <fullName>Poor Repayment</fullName>
            </value>
            <value>
                <fullName>Out of GEO Limit</fullName>
            </value>
            <value>
                <fullName>Age norms not met</fullName>
            </value>
            <value>
                <fullName>Financial norms not met (Captive Profile)</fullName>
            </value>
            <value>
                <fullName>Asking for lower Roi</fullName>
            </value>
            <value>
                <fullName>Asking for Higher funding - Ltv / Loan amount</fullName>
            </value>
            <value>
                <fullName>Client withdrawal due to change in the plan</fullName>
            </value>
            <value>
                <fullName>Document does not complete by client</fullName>
            </value>
            <value>
                <fullName>Profile Decline</fullName>
            </value>
            <value>
                <fullName>Document Decline</fullName>
            </value>
            <value>
                <fullName>FI Negative</fullName>
            </value>
            <value>
                <fullName>Any other reasons</fullName>
            </value>
            <value>
                <fullName>Customer denied the consent</fullName>
            </value>
            <value>
                <fullName>Duplicate Record</fullName>
            </value>
            <value>
                <fullName>Sanction Letter Expired</fullName>
            </value>
            <value>
                <fullName>CIBIL score below acceptable range</fullName>
            </value>
            <value>
                <fullName>Complete Documents not provided by the client</fullName>
            </value>
            <value>
                <fullName>Any other reasons not define above will update in this remarks column.</fullName>
                <isActive>false</isActive>
                <label>Any other reasons not define above will update in this remarks column.</label>
            </value>
            <value>
                <fullName>Client Withdrawal currently change the plan.</fullName>
                <isActive>false</isActive>
                <label>Client Withdrawal currently change the plan.</label>
            </value>
            <value>
                <fullName>Insufficient credit cistory</fullName>
                <isActive>false</isActive>
                <label>Insufficient credit cistory</label>
            </value>
            <value>
                <fullName>Negative credit PD</fullName>
                <isActive>false</isActive>
                <label>Negative credit PD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>