force-app/main/default/objects/Lead__c/fields/RO_RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RO_RM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RO/RM Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>