force-app/main/default/objects/Lead__c/fields/Shared_with_Managers__c.field-meta.xml
<CustomField>
    <fullName>Shared_with_Managers__c</fullName>
    <formula>CONTAINS(Manager_IDs__c, $User.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shared with Managers</label>
    <type>Checkbox</type>
</CustomField>