force-app/main/default/objects/Lead__c/fields/Sourcing__c.field-meta.xml
<CustomField>
    <fullName>Sourcing__c</fullName>
    <label>Sourcing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sourcing</valueSetName>
    </valueSet>
</CustomField>