force-app/main/default/objects/Lead__c/fields/SUBMIT_DATE__c.field-meta.xml
<CustomField>
    <fullName>SUBMIT_DATE__c</fullName>
    <label>SUBMIT DATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>