force-app/main/default/objects/Lead__c/recordTypes/BL_LeMS_Lead.recordType-meta.xml
<RecordType>
    <fullName>BL_LeMS_Lead</fullName>
    <active>true</active>
    <description>Business Loan LeMS Lead</description>
    <label>BL LeMS Lead</label>
</RecordType>