force-app/main/default/objects/Lead__c/recordTypes/BL_Partner_Portal_Lead.recordType-meta.xml
<RecordType>
    <fullName>BL_Partner_Portal_Lead</fullName>
    <active>true</active>
    <description>Business Loan Partner Portal Lead</description>
    <label>BL Partner Portal Lead</label>
</RecordType>