force-app/main/default/objects/Lead__c/recordTypes/LeMS_Lead.recordType-meta.xml
<RecordType>
    <fullName>LeMS_Lead</fullName>
    <active>true</active>
    <label>LeMS Lead</label>
</RecordType>