force-app/main/default/objects/Lead__c/recordTypes/Partner_Portal_Lead.recordType-meta.xml
<RecordType>
    <fullName>Partner_Portal_Lead</fullName>
    <active>true</active>
    <label>Partner Portal Lead</label>
</RecordType>