force-app/main/default/objects/Lead__c/validationRules/Account_Type_Validation_Corporate.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Type_Validation_Corporate</fullName>
    <active>true</active>
    <errorConditionFormula>If(
AND(
NOT(ISBLANK(Text(Account_Type__c))),
ISPICKVAL(Account_Type__c, &apos;Corporate&apos;),
NOT(ISBLANK(TEXT(Constitution__c))),
OR(((ISPICKVAL(Constitution__c, &apos;Individual&apos;))), (ISPICKVAL(Constitution__c, &apos;Sole Proprietorship&apos;)))
)
,true, false
)</errorConditionFormula>
    <errorMessage>In case of Corporate Account type you cannot choose constitution
 * Individual
 * Sole Proprietorship</errorMessage>
</ValidationRule>