force-app/main/default/objects/Lead__c/validationRules/Account_Type_Validation_Individual.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Type_Validation_Individual</fullName>
    <active>true</active>
    <errorConditionFormula>If(
AND(
NOT(ISBLANK(Text(Account_Type__c))),
ISPICKVAL(Account_Type__c, &apos;Individual&apos;),
NOT(ISBLANK(TEXT(Constitution__c))),
AND(NOT((ISPICKVAL(Constitution__c, &apos;Individual&apos;))), NOT(ISPICKVAL(Constitution__c, &apos;Sole Proprietorship&apos;)))
)
,true, false
)</errorConditionFormula>
    <errorMessage>In case of Individual Account type you can choose constitution only
 * Individual
 * Sole Proprietorship</errorMessage>
</ValidationRule>