force-app/main/default/objects/Lead__c/validationRules/Constitution_Cannot_Modified.validationRule-meta.xml
<ValidationRule>
    <fullName>Constitution_Cannot_Modified</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(AND(
RecordType.DeveloperName != &apos;LeMS_Lead&apos;,
RecordType.DeveloperName != &apos;Partner_Portal_Lead&apos; ),
NOT(ISBLANK(TEXT(PRIORVALUE(Constitution__c)))), ISCHANGED(Constitution__c) 
),true, false)</errorConditionFormula>
    <errorDisplayField>Constitution__c</errorDisplayField>
    <errorMessage>You cannot change the constitution</errorMessage>
</ValidationRule>