force-app/main/default/objects/Lead__c/validationRules/DOB_FUTURE_DATE_Non_Individual.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_FUTURE_DATE_Non_Individual</fullName>
    <active>true</active>
    <description>DOB is required if the constitution is a Sole Proprietorship or individual</description>
    <errorConditionFormula>IF(AND(NOT(ISPICKVAL( Constitution__c , &apos;Individual&apos;)),
NOT(ISPICKVAL( Constitution__c , &apos;Sole Proprietorship&apos;)),
 Date_of_Birth_Incorporation__c &gt;  TODAY() )
, true, false)</errorConditionFormula>
    <errorDisplayField>Date_of_Birth_Incorporation__c</errorDisplayField>
    <errorMessage>Future date not allowed</errorMessage>
</ValidationRule>