force-app/main/default/objects/Lead__c/validationRules/DOB_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_Validation</fullName>
    <active>false</active>
    <description>DOB is required if the constitution is a Sole Proprietorship or individual</description>
    <errorConditionFormula>IF( RecordType.DeveloperName == &apos;LeMS_Lead&apos; &amp;&amp; ISNEW(),
false,
AND(
NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),
 ISBLANK( DOB__c ) , OR( ISPICKVAL( Constitution__c , &apos;Individual&apos;) , ISPICKVAL( Constitution__c , &apos;Sole Proprietorship&apos;) )) 
)</errorConditionFormula>
    <errorMessage>Please fill the Date of Birth</errorMessage>
</ValidationRule>