force-app/main/default/objects/Lead__c/validationRules/DOI_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>DOI_Validation</fullName>
    <active>false</active>
    <description>DOI is required if the constitution should not have  a Sole Proprietorship or individual</description>
    <errorConditionFormula>IF( RecordType.DeveloperName == &apos;LeMS_Lead&apos; &amp;&amp; ISNEW(),
false,
AND(
NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),
 ISBLANK( Date_Of_Incorporation__c ) ,
  NOT(ISPICKVAL( Constitution__c , &apos;Sole Proprietorship&apos;)),
  NOT(ISPICKVAL( Constitution__c , &apos;Individual&apos;))
 )
)</errorConditionFormula>
    <errorMessage>Please fill in the Date Of Incorporation</errorMessage>
</ValidationRule>