force-app/main/default/objects/Lead__c/validationRules/Entity_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Entity_Name_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Entity_Name__c)),
				NOT($Setup.Bypass_Validations__c.Bypass_Validation__c)
,NOT(REGEX( Entity_Name__c, &quot;[a-zA-Z ]*$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Entity_Name__c</errorDisplayField>
    <errorMessage>Entity Name allows only letters.</errorMessage>
</ValidationRule>