force-app/main/default/objects/Lead__c/validationRules/EntityNameValidationBasedOnConstitution.validationRule-meta.xml
<ValidationRule>
    <fullName>EntityNameValidationBasedOnConstitution</fullName>
    <active>true</active>
    <description>Entity Validation Based on Constitution</description>
    <errorConditionFormula>AND(
 CONTAINS(RecordType.Name, &apos;BL&apos;),
 NOT(ISPICKVAL( Constitution__c , &apos;&apos;)),
 NOT(ISPICKVAL( Constitution__c , &apos;Individual&apos;)),
 NOT(ISPICKVAL( Constitution__c , &apos;Sole Proprietorship&apos;)),
 ISBLANK(   Entity_Name__c ),
 NOT(ISPICKVAL(Lead_Status__c , &apos;Cancelled&apos;)), 
 NOT($Setup.Bypass_Validations__c.Bypass_Validation__c)
)</errorConditionFormula>
    <errorDisplayField>Entity_Name__c</errorDisplayField>
    <errorMessage>The Entity Name is mandatory when the constitution is of non-individual type.</errorMessage>
</ValidationRule>